Fix layout issue with block dialog

--- a/src/main/webapp/components/Block.less
+++ b/src/main/webapp/components/Block.less
@@ -3,7 +3,6 @@ div.Block
 	width: 50%;
 	display: flex;
 	height: 200px;
-	flex-wrap: wrap;
 	border-radius: 5px;
 	align-items: stretch;
 	flex-direction: column;
@@ -13,7 +12,7 @@ div.Block
 
 	> div:nth-child(1)
 		{
-		height: 40px;
+		flex-basis: 40px;
 		background-color: @base_shaded;
 
 		> label
@@ -36,25 +35,26 @@ div.Block
 
 		> label
 		{
+			flex-grow: 1;
 			display:flex;
 			font-size:20px;
-			flex-basis: 50%;
 			align-items:center;
 			justify-content:center;
 		}
 
 		> progress
 		{
-			flex-basis: 50%;
+			flex-grow: 1;
+			width: 100%;
 		}
 	}
 
 	> div:nth-child(3)
 		{
-		height: 40px;
 		padding: 8px;
 		display: flex;
 		font-size: 16px;
+		flex-basis: 40px;
 		align-items: center;
 		justify-content: flex-end;
 	}
